--- a/projects.html
+++ b/projects.html
@@ -41,9 +41,56 @@
         <br>
         <ul>
             <li>
+                <strong>
+                    Brain-Computer Interface Simulator</strong> (Python) - In Progress -
+                <a href="https://github.com/Alex-Irae/BCI_SIM" target="_blank">[View on GitHub]</a><br><br>
+                Architecting a Brain-Computer Interface simulator that processes and interprets
+                multimodal neurophysiological signals (EEG/MEG) for real-time virtual control applications<br>
+                &nbsp&nbsp&nbsp&nbsp<br>
+                <div class="description" style="display: none;">
+                    Project Objectives:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Develop a robust neural decoding system that allows users with paralysis to
+                    control computers or
+                    devices.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Create a user-friendly interface for seamless interaction.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Ensure high accuracy and reliability in interpreting neural signals.<br>
+                </div>
+
+                <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
+            </li>
+            <li>
+                <strong>
+                    Text Summarization Based on Deep Learning </strong> (Python) - In Progess - <br><br>
+                The "Text Summarization Based on Deep Learning" project aims to leverage advanced deep learning
+                techniques to generate concise summaries of selected texts from specific categories such as economics or
+                ecological protection. <br>
+                The project focuses on single-text summarization, allowing users to input a text
+                and receive a coherent summary while enabling manual control over the desired length of the
+                output.<br><br>
+                <div class="description" style="display: none;">
+                    Key features :<br>
+
+                    &nbsp&nbsp&nbsp&nbsp- Input and Output: The system accepts a single piece of text and produces a
+                    summarized result, enhancing the efficiency of information consumption.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Text Categorization: Users can select texts from predefined categories,
+                    ensuring relevance and accuracy in summarization.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Length Control: Users can manually specify the approximate length of the
+                    summary, allowing for tailored outputs to fit various use cases.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Result Evaluation: The project incorporates evaluation metrics such as
+                    Distinct-n and Perplexity to assess the quality of the generated summaries, ensuring they meet
+                    established standards.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Model Repository: The project utilizes state-of-the-art open-source models,
+                    including Pegasus, available from various model repositories like Hugging Face and ModelScope.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Parameter Tuning: A thorough understanding of the main parameters is included,
+                    allowing for effective tuning and optimization of model performance.
+                </div>
+
+                <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
+            </li>
+            <li>
                 <strong
                     onclick="openModal(['assets/dispred (2).png','assets/dispred (3).png','assets/dispred (4).png','assets/dispred (5).png','assets/dispred (1).png'])">
-                    Disease prediction algorithm 👁</strong> (Python)
+                    Disease prediction algorithm 👁</strong> (Python) - Fall 2024
                 <a href="https://github.com/Alex-Irae/DiseasePrediction" target="_blank"> [View on GitHub]</a><br>
                 Disease Prediction - Advanced Diagnostic Tool<br>&nbsp&nbsp&nbsp&nbsp <br>
                 Developed an AI-driven disease prediction system utilizing advanced machine learning algorithms to
@@ -95,66 +142,49 @@
 
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
+
             <li>
                 <strong>
-                    Brain-Computer Interface Simulator</strong> (Python) - In Progress -
+                    NLP model for text classification</strong> (Python) - Fall 2024
                 <a href="https://github.com/Alex-Irae/BCI_SIM" target="_blank">[View on GitHub]</a><br><br>
-                Architecting a Brain-Computer Interface simulator that processes and interprets
-                multimodal neurophysiological signals (EEG/MEG) for real-time virtual control applications<br>
-                &nbsp&nbsp&nbsp&nbsp<br>
+                Developed a high-performance text classification model leveraging advanced natural language processing
+                (NLP) techniques to categorize BBC news articles into various topics. This project enhances automatic
+                content analysis and organization, enabling efficient and accurate topic identification.<br>
                 <div class="description" style="display: none;">
-                    Project Objectives:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Develop a robust neural decoding system that allows users with paralysis to
-                    control computers or
-                    devices.<br>
-                    &nbsp&nbsp&nbsp&nbsp- Create a user-friendly interface for seamless interaction.<br>
-                    &nbsp&nbsp&nbsp&nbsp- Ensure high accuracy and reliability in interpreting neural signals.<br>
-                </div>
-
-                <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
-            </li>
-            <li>
-                <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
-                    BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB)
-                <a href="https://github.com/Alex-Irae/Hand_Movement_Recognition" target="_blank">[View on
-                    GitHub]</a><br><br>
-                Built a comprehensive hand movement recognition system (accuracy of 98%) during an advanced BCI workshop
-                at Tianjin
-                University, led by Dr. Uriel and Dr. Tareq. The project combined hardware and software components:<br>
-                &nbsp&nbsp&nbsp&nbsp<br>
-                <div class="description" style="display: none;">
-                    Hardware Implementation:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Designed data collection system using Arduino Mega 2560, extension gauges, and
-                    accelerometers<br>
-                    &nbsp&nbsp&nbsp&nbsp- Created a sensor-equipped glove to capture precise finger movements and
-                    orientations<br>
-                    &nbsp&nbsp&nbsp&nbsp- Integrated servo motors for movement reproduction<br>&nbsp&nbsp&nbsp&nbsp <br>
-
-                    Software Development:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Developed AI model to recognize 6 distinct movement patterns:<br>
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 2 Static patterns
-                    (open/closed positions)<br>
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 4 Dynamic patterns
-                    (opening/closing, lateral movement, arm rotation, hand
-                    closure)<br>
-                    &nbsp&nbsp&nbsp&nbsp- Trained the model using 70/30 split methodology with 5000+ iterations<br>
-                    &nbsp&nbsp&nbsp&nbsp- Implemented real-time pattern recognition for immediate movement
-                    classification<br>
-                    &nbsp&nbsp&nbsp&nbsp- Created a complete information-processing chain: sensor input → pattern
-                    recognition → motor control.<br>
-                    &nbsp&nbsp&nbsp&nbsp <br>
+                    Technical Implementation:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Architecture: Designed a neural network with layers using ReLU, Swish, and
+                    Softmax activations for
+                    effective feature learning and classification.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Data Processing: Preprocessed text with tokenization, padding to equal length,
+                    and stemming to
+                    reduce vocabulary size. Implemented TF-IDF vectorization for feature extraction.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Optimization: Used Optuna for hyperparameter tuning on dropout rate, learning
+                    rate, and batch size,
+                    enhancing both accuracy and training efficiency.<br>
+                    Research & Development:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Comparison: Benchmarked neural network performance against Random Forest,
+                    Logistic Regression, and
+                    SVM models, validating model selection for best performance.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Validation: Conducted k-fold cross-validation and split testing to ensure
+                    model generalization on
+                    unseen data.<br>
+                    Key Features:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Accuracy: Achieved ~92% accuracy in categorizing articles into topics.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Scalability: Designed pipeline to allow for easy model retraining with new
+                    data or labels.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Documentation: Provided setup guides for reproducibility and model
+                    enhancement.<br>
                     Results:<br>
-                    Successfully developed a system capable of recognizing and reproducing complex hand movements in
-                    real-time with an accuracy of 98%, demonstrating practical applications in human-computer
-                    interaction and gesture control
-                    systems.
+                    &nbsp&nbsp&nbsp&nbsp- Performance: Attained high accuracy with regularization to prevent
+                    overfitting.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Scalability: Framework extensible for additional languages and sources.
                 </div>
-
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
+
             <li>
                 <strong>
-                    Custom Neural Network Framework for Predictive Modeling </strong> (Python)
+                    Custom Neural Network Framework for Predictive Modeling </strong> (Python) - October 2024
                 <a href="https://github.com/Alex-Irae/Artificial-neural-Network/tree/main" target="_blank">[View on
                     GitHub]</a> <br>
                 Integrated in the disease prediction algorithm<br><br>
@@ -190,38 +220,10 @@
 
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
-            <li>
-                <strong>
-                    Text Summarization Based on Deep Learning </strong> (Python) - In Progess - <br><br>
-                The "Text Summarization Based on Deep Learning" project aims to leverage advanced deep learning
-                techniques to generate concise summaries of selected texts from specific categories such as economics or
-                ecological protection. <br>
-                The project focuses on single-text summarization, allowing users to input a text
-                and receive a coherent summary while enabling manual control over the desired length of the
-                output.<br><br>
-                <div class="description" style="display: none;">
-                    Key features :<br>
 
-                    &nbsp&nbsp&nbsp&nbsp- Input and Output: The system accepts a single piece of text and produces a
-                    summarized result, enhancing the efficiency of information consumption.<br>
-                    &nbsp&nbsp&nbsp&nbsp- Text Categorization: Users can select texts from predefined categories,
-                    ensuring relevance and accuracy in summarization.<br>
-                    &nbsp&nbsp&nbsp&nbsp- Length Control: Users can manually specify the approximate length of the
-                    summary, allowing for tailored outputs to fit various use cases.<br>
-                    &nbsp&nbsp&nbsp&nbsp- Result Evaluation: The project incorporates evaluation metrics such as
-                    Distinct-n and Perplexity to assess the quality of the generated summaries, ensuring they meet
-                    established standards.<br>
-                    &nbsp&nbsp&nbsp&nbsp- Model Repository: The project utilizes state-of-the-art open-source models,
-                    including Pegasus, available from various model repositories like Hugging Face and ModelScope.<br>
-                    &nbsp&nbsp&nbsp&nbsp- Parameter Tuning: A thorough understanding of the main parameters is included,
-                    allowing for effective tuning and optimization of model performance.
-                </div>
-
-                <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
-            </li>
             <li>
                 <strong onclick="openModal(['assets/ort.png','assets/ort2.png','assets/ort3.png',])">
-                    Knee Orthosis Development 👁</strong> (Python, MATLAB)<br>
+                    Knee Orthosis Development 👁</strong> (Python, MATLAB) - Spring 2024<br>
                 Knee Orthosis Development - Motion Analysis & Rehabilitation<br><br>
                 Developed an intelligent knee orthosis system for precise monitoring and analysis of rehabilitation.
                 This
@@ -273,46 +275,48 @@
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
             <li>
-                <strong>My Portfolio</strong> (HTML, CSS & Js)
-                <a href="https://github.com/Alex-Irae/Portfolio" target="_blank">[View on GitHub]</a><br>
-                This website presents who I am and what I do.
-            </li>
             <li>
-                <strong onclick=" openModal(['assets/fdf.png','assets/fdf2.png'])">
-                    Fire Propagation Simulation 👁</strong> (Java)<br><br>
-                Developed an interactive environmental simulation system to model fire spread dynamics across various
-                terrain types with real-time adjustable parameters.<br>
-                &nbsp&nbsp&nbsp&nbsp <br>
+                <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
+                    BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB) - Fall 2023
+                <a href="https://github.com/Alex-Irae/Hand_Movement_Recognition" target="_blank">[View on
+                    GitHub]</a><br><br>
+                Built a comprehensive hand movement recognition system (accuracy of 98%) during an advanced BCI workshop
+                at Tianjin
+                University, led by Dr. Uriel and Dr. Tareq. The project combined hardware and software components:<br>
+                &nbsp&nbsp&nbsp&nbsp<br>
                 <div class="description" style="display: none;">
-                    Technical Implementation:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Created a multi-frame Java application using Swing/AWT for the user
-                    interface<br>
-                    &nbsp&nbsp&nbsp&nbsp- Implemented a dynamic grid-based simulation system using JButtons for terrain
-                    visualization<br>
-                    &nbsp&nbsp&nbsp&nbsp- Developed terrain generation algorithms with random distribution patterns<br>
-                    &nbsp&nbsp&nbsp&nbsp- Built a sophisticated wind system affecting fire propagation patterns<br>
-                    &nbsp&nbsp&nbsp&nbsp <br>
-                    Key Features:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Terrain Types: Grass, forest, water, and urban areas<br>
-                    &nbsp&nbsp&nbsp&nbsp- Environmental Controls: Wind speed, direction, and fire ignition points<br>
-                    &nbsp&nbsp&nbsp&nbsp- Real-time Simulation and parameter adjustment<br>
+                    Hardware Implementation:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Designed data collection system using Arduino Mega 2560, extension gauges, and
+                    accelerometers<br>
+                    &nbsp&nbsp&nbsp&nbsp- Created a sensor-equipped glove to capture precise finger movements and
+                    orientations<br>
+                    &nbsp&nbsp&nbsp&nbsp- Integrated servo motors for movement reproduction<br>&nbsp&nbsp&nbsp&nbsp <br>
+
+                    Software Development:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Developed AI model to recognize 6 distinct movement patterns:<br>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 2 Static patterns
+                    (open/closed positions)<br>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 4 Dynamic patterns
+                    (opening/closing, lateral movement, arm rotation, hand
+                    closure)<br>
+                    &nbsp&nbsp&nbsp&nbsp- Trained the model using 70/30 split methodology with 5000+ iterations<br>
+                    &nbsp&nbsp&nbsp&nbsp- Implemented real-time pattern recognition for immediate movement
+                    classification<br>
+                    &nbsp&nbsp&nbsp&nbsp- Created a complete information-processing chain: sensor input → pattern
+                    recognition → motor control.<br>
                     &nbsp&nbsp&nbsp&nbsp <br>
                     Results:<br>
-                    Successfully created a comprehensive fire spread simulation tool that allows users to:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Model various environmental scenarios<br>
-                    &nbsp&nbsp&nbsp&nbsp- Study fire behavior under different conditions<br>
-                    &nbsp&nbsp&nbsp&nbsp- Analyze the impact of terrain types and weather conditions<br>
-                    &nbsp&nbsp&nbsp&nbsp- Visualize complex environmental interactions<br>
+                    Successfully developed a system capable of recognizing and reproducing complex hand movements in
+                    real-time with an accuracy of 98%, demonstrating practical applications in human-computer
+                    interaction and gesture control
+                    systems.
                 </div>
 
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
-            <li>
-                <strong onclick="openModal(['assets/rbt1.png'])">
-                    Robot Stress Test 👁</strong> (CATIA)<br><br>
-                Conducted stress testing on robotic designs to evaluate performance under load to evaluate its capacity
-                to perform various tasks in different environments.
-                Used CATIA v5 to model the robot and simulate the stress test.
+            <strong>My Portfolio</strong> (HTML, CSS & Js) - Summer 2024
+            <a href="https://github.com/Alex-Irae/Portfolio" target="_blank">[View on GitHub]</a><br>
+            This website presents who I am and what I do.
             </li>
         </ul>
     </section>
