link update for rojects

--- a/projects.html
+++ b/projects.html
@@ -146,7 +146,7 @@
             <li>
                 <strong>
                     NLP model for text classification</strong> (Python) - Fall 2024
-                <a href="https://github.com/Alex-Irae/BCI_SIM" target="_blank">[View on GitHub]</a><br><br>
+                <a href="https://github.com/Alex-Irae/NLP_Text_Classifier" target="_blank">[View on GitHub]</a><br><br>
                 Developed a high-performance text classification model leveraging advanced natural language processing
                 (NLP) techniques to categorize BBC news articles into various topics. This project enhances automatic
                 content analysis and organization, enabling efficient and accurate topic identification.<br>
