--- a/projects.html
+++ b/projects.html
@@ -149,7 +149,7 @@
                 <a href="https://github.com/Alex-Irae/NLP_Text_Classifier" target="_blank">[View on GitHub]</a><br><br>
                 Developed a high-performance text classification model leveraging advanced natural language processing
                 (NLP) techniques to categorize BBC news articles into various topics. This project enhances automatic
-                content analysis and organization, enabling efficient and accurate topic identification.<br>
+                content analysis and organization, enabling efficient and accurate topic identification.<br><br>
                 <div class="description" style="display: none;">
                     Technical Implementation:<br>
                     &nbsp&nbsp&nbsp&nbsp- Architecture: Designed a neural network with layers using ReLU, Swish, and
@@ -179,6 +179,7 @@
                     overfitting.<br>
                     &nbsp&nbsp&nbsp&nbsp- Scalability: Framework extensible for additional languages and sources.
                 </div>
+
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
 
@@ -278,7 +279,7 @@
             <li>
                 <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
                     BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB) - Fall 2023
-                <a href="https://github.com/Alex-Irae/Hand_Movement_Recognition" target="_blank">[View on
+                <a href="https://github.com/Alex-Irae/Hand_Movement_Recognition" target="_blank"><br>[View on
                     GitHub]</a><br><br>
                 Built a comprehensive hand movement recognition system (accuracy of 98%) during an advanced BCI workshop
                 at Tianjin
@@ -314,6 +315,7 @@
 
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
+            <li>
             <strong>My Portfolio</strong> (HTML, CSS & Js) - Summer 2024
             <a href="https://github.com/Alex-Irae/Portfolio" target="_blank">[View on GitHub]</a><br>
             This website presents who I am and what I do.
