--- a/projects.html
+++ b/projects.html
@@ -169,7 +169,7 @@
                     model generalization on
                     unseen data.<br>
                     Key Features:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Accuracy: Achieved ~92% accuracy in categorizing articles into topics.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Accuracy: Achieved 94% accuracy in categorizing articles into topics.<br>
                     &nbsp&nbsp&nbsp&nbsp- Scalability: Designed pipeline to allow for easy model retraining with new
                     data or labels.<br>
                     &nbsp&nbsp&nbsp&nbsp- Documentation: Provided setup guides for reproducibility and model
