metricspicture for NLP project

--- a/projects.html
+++ b/projects.html
@@ -144,7 +144,7 @@
             </li>
 
             <li>
-                <strong>
+                <strong onclick="openModal(['assests/NLP_metrics.png'])">
                     NLP model for text classification</strong> (Python) - Fall 2024
                 <a href="https://github.com/Alex-Irae/NLP_Text_Classifier" target="_blank">[View on GitHub]</a><br><br>
                 Developed a high-performance text classification model leveraging advanced natural language processing
@@ -316,9 +316,9 @@
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
             <li>
-            <strong>My Portfolio</strong> (HTML, CSS & Js) - Summer 2024
-            <a href="https://github.com/Alex-Irae/Portfolio" target="_blank">[View on GitHub]</a><br>
-            This website presents who I am and what I do.
+                <strong>My Portfolio</strong> (HTML, CSS & Js) - Summer 2024
+                <a href="https://github.com/Alex-Irae/Portfolio" target="_blank">[View on GitHub]</a><br>
+                This website presents who I am and what I do.
             </li>
         </ul>
     </section>
