--- a/projects.html
+++ b/projects.html
@@ -61,10 +61,10 @@
             <li>
                 <strong>
                     Text Summarization Based on Deep Learning </strong> (Python) - In Progess - <br><br>
-                The "Text Summarization Based on Deep Learning" project aims to leverage advanced deep learning
+                This project aims to leverage advanced deep learning
                 techniques to generate concise summaries of selected texts from specific categories such as economics or
                 ecological protection. <br>
-                The project focuses on single-text summarization, allowing users to input a text
+                It focuses on single-text summarization, allowing users to input a text
                 and receive a coherent summary while enabling manual control over the desired length of the
                 output.<br><br>
                 <div class="description" style="display: none;">
