changes to exp +page1 modbileview

--- a/experience.html
+++ b/experience.html
@@ -43,8 +43,9 @@
             <li>
                 <strong>Intern,</strong> Zen2050 (Paris) <em>(Summer 2022)</em><br><br>
 
-                I had the opportunity to contribute to our mission of action toward during my internship at
-                Zen2050Maintenant, a climate focused organization in Paris.
+                I had the opportunity to contribute to our mission to raise the awareness and fight the climate during
+                my internship at
+                Zen2050Maintenant.
                 Zen2050 is dedicated to addressing climate issues on a local scale within the
                 Hauts-de-Seine and Val-de-Marne regions, particularly by promoting sustainable practices and educational
                 activities. They focus on integrating climate initiatives into local community structures through
