changes to index, add words changes

--- a/index.html
+++ b/index.html
@@ -30,23 +30,27 @@
     <section class="full-page" id="section0">
         <div class="home-content">
             <h1>Hi, I'm <span>Alexandre CARMINOT</span></h1>
-            <h3 class="typing-text">I am an engineering student.</h3>
-            <p>As a student of engineering and medicine, my journey is deeply rooted in the intersection of these
-                fields.<br> Focusing on machine learning and medical engineering, I am driven by a passion for exploring
-                the brain, neuroscience, and artificial intelligence. This passion has led me into the realms of
-                brain-computer interfaces and neuro-engineering, where I apply my skills through various projects using
-                Python, MATLAB, and C++ to explore the brain, the body and the world using machine intelligence,
-                healthcare analytics, and Deep Learning to achieve my goals.<br>
-                Currently studying computer science, machine learning, at Tianjin University for the fall semester,
-                I am now focusing on the development of machine learning, algorithms and computer vision to further
-                enhance my future projects, increase precision, fidelity and accuracy.<br>
-                As a project leader, I thrive in collaborative environments that not only nurture creativity but also
-                actively
-                challenge my problem-solving abilities. Engaging with diverse teams allows me to approach complex
-                challenges from multiple perspectives, fostering innovation and enhancing my technical skills. <br>
-                <br>Beyond academics, my love for sports, science, music, and cooking shapes a balanced lifestyle.
-                Curiosity fuels my ambitions as I continuously seek new challenges to deepen my understanding and
-                contribute to the fusion of technology and medicine in advancing neuroengineering innovations.
+            <h3 class="typing-text">I am a <span></span></h3>
+            <p>As a student exploring engineering and medicine, my journey is deeply rooted in the intersection of these
+                fields.<br>
+                Focusing on AI and medical engineering, I am driven by a desire to unveil how machine learning can
+                revolutionize healthcare. This passion has led me into the realms of brain-computer interfaces,
+                neuroengineering, and drug discovery, where I apply my skills through various projects using Python,
+                MATLAB, and C++ to tackle complex challenges in medicine with deep learning and data-driven insights.
+                <br>
+                Currently studying computer science and machine learning at Tianjin University for the fall semester, I
+                am focusing on the development of machine learning algorithms and computer vision techniques to enhance
+                the precision, reliability, and effectiveness of future AI-driven solutions in healthcare.
+                <br>
+                As a project leader, I thrive in collaborative environments that foster innovation and challenge my
+                problem-solving abilities. Engaging with diverse teams allows me to approach machine learning challenges
+                from multiple perspectives, further strengthening my technical expertise.
+                <br>
+                Beyond academics, my love for sports, science, music, and cooking shapes a balanced lifestyle.
+                <br>
+                Curiosity fuels my ambitions as I continuously seek new challenges to deepen my understanding of AI and
+                its transformative potential, contributing to advancements in medicine, neuroscience, and drug
+                discovery.
             </p>
             <div class="social-icons">
                 <a href="mailto:alexandre.carminot@outlook.com"><i class="fa-brands fa-at"></i></a>
@@ -93,9 +97,6 @@
                 and archaeology. These fields invite me to ponder the mysteries of the universe and the stories etched
                 into the fabric of human history.I am drawn to questions that challenge our understanding of existence,
                 stirring a sense of wonder about our place in the cosmos.</p>
-        </div>
-        <div class="scroll-down-arrow">
-            <i class="fas fa-chevron-down"></i>
         </div>
     </section>
 
