--- a/projects.html
+++ b/projects.html
@@ -41,19 +41,95 @@
         <br>
         <ul>
             <li>
-                <strong>
-                    Brain-Computer Interface Simulator</strong> (Python) - In Progress -
-                <a href="https://github.com/Alex-Irae/BCI_SIM" target="_blank">[View on GitHub]</a><br><br>
-                Architecting a Brain-Computer Interface simulator that processes and interprets
-                multimodal neurophysiological signals (EEG/MEG) for real-time virtual control applications<br>
+                <strong
+                    onclick="openModal(['assets/dispred (2).png','assets/dispred (3).png','assets/dispred (4).png','assets/dispred (5).png','assets/dispred (1).png'])">
+                    Disease prediction algorithm 👁</strong> (Python) - Fall 2024
+                <a href="https://github.com/Alex-Irae/DiseasePrediction" target="_blank"> [View on GitHub]</a><br>
+                Disease Prediction - Advanced Diagnostic Tool<br>&nbsp&nbsp&nbsp&nbsp <br>
+                Developed an AI-driven disease prediction system utilizing advanced machine learning algorithms to
+                accurately diagnose various diseases based on user-reported symptoms. <br>This project aims to enhance
+                diagnostic accuracy and accessibility for patients outside of traditional clinical environments.<br>
                 &nbsp&nbsp&nbsp&nbsp<br>
                 <div class="description" style="display: none;">
-                    Project Objectives:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Develop a robust neural decoding system that allows users with paralysis to
-                    control computers or
-                    devices.<br>
-                    &nbsp&nbsp&nbsp&nbsp- Create a user-friendly interface for seamless interaction.<br>
-                    &nbsp&nbsp&nbsp&nbsp- Ensure high accuracy and reliability in interpreting neural signals.<br>
+
+                    Technical Implementation:<br>
+
+                    &nbsp&nbsp&nbsp&nbsp - Implemented a neural network architecture featuring a combination of Sigmoid,
+                    ReLU, Swish, and Softmax activation functions, achieving optimal prediction accuracy.<br>
+                    &nbsp&nbsp&nbsp&nbsp - Employed data augmentation techniques like SMOTE to handle class imbalance in
+                    the
+                    dataset.<br>
+                    &nbsp&nbsp&nbsp&nbsp - Utilized Optuna for hyperparameter optimization, enhancing model
+                    performance.<br>&nbsp&nbsp&nbsp&nbsp<br>
+                    Research & Development:<br>
+
+                    &nbsp&nbsp&nbsp&nbsp - Conducted extensive data preprocessing and feature engineering to enhance
+                    model training performance.<br>
+                    &nbsp&nbsp&nbsp&nbsp - Analyzed model performance across various algorithms, including XGBoost, SVM,
+                    and
+                    Logistic Regression.<br>
+                    &nbsp&nbsp&nbsp&nbsp - Validated model predictions on unseen data to ensure robustness and
+                    reliability.<br>&nbsp&nbsp&nbsp&nbsp<br>
+                    Key Features:<br>
+
+                    &nbsp&nbsp&nbsp&nbsp - Achieved 96% accuracy in predicting diseases based on symptoms,
+                    demonstrating robust response capabilities to noise in input data.<br>
+                    &nbsp&nbsp&nbsp&nbsp - User-friendly interface for symptom input and disease prediction results.<br>
+                    &nbsp&nbsp&nbsp&nbsp - Continuous model improvement through ongoing training with new data.<br>
+                    &nbsp&nbsp&nbsp&nbsp - Documentation and guidelines for users to refine the model and provide
+                    feedback.<br>&nbsp&nbsp&nbsp&nbsp<br>
+                    Results:
+                    <br>
+                    &nbsp&nbsp&nbsp&nbsp - Achieved exceptional model performance with high accuracy and reliability
+                    without
+                    overfitting.<br>
+                    &nbsp&nbsp&nbsp&nbsp -Developed a framework for real-time disease prediction and monitoring.<br>
+                    &nbsp&nbsp&nbsp&nbsp -Established a foundation for future enhancements, including a recommendation
+                    system for personalized
+                    healthcare.<br>
+                    &nbsp&nbsp&nbsp&nbsp<br>
+                    Impact: <br>&nbsp&nbsp&nbsp&nbspThe system empowers users to receive timely health assessments and
+                    potential diagnoses, facilitating proactive healthcare management and improving access to medical
+                    guidance outside clinical settings.
+                </div>
+
+                <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
+            </li>
+            <li>
+                <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
+                    BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB) - Fall 2023
+                <a href="https://github.com/Alex-Irae/Hand_Movement_Recognition" target="_blank"><br>[View on
+                    GitHub]</a><br><br>
+                Built a comprehensive hand movement recognition system (accuracy of 98%) during an advanced BCI workshop
+                at Tianjin
+                University, led by Dr. Uriel and Dr. Tareq. The project combined hardware and software components:<br>
+                &nbsp&nbsp&nbsp&nbsp<br>
+                <div class="description" style="display: none;">
+                    Hardware Implementation:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Designed data collection system using Arduino Mega 2560, extension gauges, and
+                    accelerometers<br>
+                    &nbsp&nbsp&nbsp&nbsp- Created a sensor-equipped glove to capture precise finger movements and
+                    orientations<br>
+                    &nbsp&nbsp&nbsp&nbsp- Integrated servo motors for movement reproduction<br>&nbsp&nbsp&nbsp&nbsp <br>
+
+                    Software Development:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Developed AI model to recognize 6 distinct movement patterns:<br>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 2 Static patterns
+                    (open/closed positions)<br>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 4 Dynamic patterns
+                    (opening/closing, lateral movement, arm rotation, hand
+                    closure)<br>
+                    &nbsp&nbsp&nbsp&nbsp- Trained the model using 70/30 split methodology with 5000+ iterations<br>
+                    &nbsp&nbsp&nbsp&nbsp- Implemented real-time pattern recognition for immediate movement
+                    classification<br>
+                    &nbsp&nbsp&nbsp&nbsp- Created a complete information-processing chain: sensor input → pattern
+                    recognition → motor control.<br>
+                    &nbsp&nbsp&nbsp&nbsp <br>
+                    Results:<br>
+                    Successfully developed a system capable of recognizing and reproducing complex hand movements in
+                    real-time with an accuracy of 98%, demonstrating practical applications in human-computer
+                    interaction and gesture control
+                    systems.
                 </div>
 
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
@@ -87,61 +163,7 @@
 
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
-            <li>
-                <strong
-                    onclick="openModal(['assets/dispred (2).png','assets/dispred (3).png','assets/dispred (4).png','assets/dispred (5).png','assets/dispred (1).png'])">
-                    Disease prediction algorithm 👁</strong> (Python) - Fall 2024
-                <a href="https://github.com/Alex-Irae/DiseasePrediction" target="_blank"> [View on GitHub]</a><br>
-                Disease Prediction - Advanced Diagnostic Tool<br>&nbsp&nbsp&nbsp&nbsp <br>
-                Developed an AI-driven disease prediction system utilizing advanced machine learning algorithms to
-                accurately diagnose various diseases based on user-reported symptoms. <br>This project aims to enhance
-                diagnostic accuracy and accessibility for patients outside of traditional clinical environments.<br>
-                &nbsp&nbsp&nbsp&nbsp<br>
-                <div class="description" style="display: none;">
-
-                    Technical Implementation:<br>
-
-                    &nbsp&nbsp&nbsp&nbsp - Implemented a neural network architecture featuring a combination of Sigmoid,
-                    ReLU, Swish, and Softmax activation functions, achieving optimal prediction accuracy.<br>
-                    &nbsp&nbsp&nbsp&nbsp - Employed data augmentation techniques like SMOTE to handle class imbalance in
-                    the
-                    dataset.<br>
-                    &nbsp&nbsp&nbsp&nbsp - Utilized Optuna for hyperparameter optimization, enhancing model
-                    performance.<br>&nbsp&nbsp&nbsp&nbsp<br>
-                    Research & Development:<br>
-
-                    &nbsp&nbsp&nbsp&nbsp - Conducted extensive data preprocessing and feature engineering to enhance
-                    model training performance.<br>
-                    &nbsp&nbsp&nbsp&nbsp - Analyzed model performance across various algorithms, including XGBoost, SVM,
-                    and
-                    Logistic Regression.<br>
-                    &nbsp&nbsp&nbsp&nbsp - Validated model predictions on unseen data to ensure robustness and
-                    reliability.<br>&nbsp&nbsp&nbsp&nbsp<br>
-                    Key Features:<br>
-
-                    &nbsp&nbsp&nbsp&nbsp - Achieved approximately 96% accuracy in predicting diseases based on symptoms,
-                    demonstrating robust response capabilities to noise in input data.<br>
-                    &nbsp&nbsp&nbsp&nbsp - User-friendly interface for symptom input and disease prediction results.<br>
-                    &nbsp&nbsp&nbsp&nbsp - Continuous model improvement through ongoing training with new data.<br>
-                    &nbsp&nbsp&nbsp&nbsp - Documentation and guidelines for users to refine the model and provide
-                    feedback.<br>&nbsp&nbsp&nbsp&nbsp<br>
-                    Results:
-                    <br>
-                    &nbsp&nbsp&nbsp&nbsp - Achieved exceptional model performance with high accuracy and reliability
-                    without
-                    overfitting.<br>
-                    &nbsp&nbsp&nbsp&nbsp -Developed a framework for real-time disease prediction and monitoring.<br>
-                    &nbsp&nbsp&nbsp&nbsp -Established a foundation for future enhancements, including a recommendation
-                    system for personalized
-                    healthcare.<br>
-                    &nbsp&nbsp&nbsp&nbsp<br>
-                    Impact: <br>&nbsp&nbsp&nbsp&nbspThe system empowers users to receive timely health assessments and
-                    potential diagnoses, facilitating proactive healthcare management and improving access to medical
-                    guidance outside clinical settings.
-                </div>
-
-                <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
-            </li>
+            
 
             <li>
                 <strong onclick="openModal(['assests/NLP_metrics.png'])">
@@ -276,45 +298,7 @@
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
             <li>
-            <li>
-                <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
-                    BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB) - Fall 2023
-                <a href="https://github.com/Alex-Irae/Hand_Movement_Recognition" target="_blank"><br>[View on
-                    GitHub]</a><br><br>
-                Built a comprehensive hand movement recognition system (accuracy of 98%) during an advanced BCI workshop
-                at Tianjin
-                University, led by Dr. Uriel and Dr. Tareq. The project combined hardware and software components:<br>
-                &nbsp&nbsp&nbsp&nbsp<br>
-                <div class="description" style="display: none;">
-                    Hardware Implementation:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Designed data collection system using Arduino Mega 2560, extension gauges, and
-                    accelerometers<br>
-                    &nbsp&nbsp&nbsp&nbsp- Created a sensor-equipped glove to capture precise finger movements and
-                    orientations<br>
-                    &nbsp&nbsp&nbsp&nbsp- Integrated servo motors for movement reproduction<br>&nbsp&nbsp&nbsp&nbsp <br>
-
-                    Software Development:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Developed AI model to recognize 6 distinct movement patterns:<br>
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 2 Static patterns
-                    (open/closed positions)<br>
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 4 Dynamic patterns
-                    (opening/closing, lateral movement, arm rotation, hand
-                    closure)<br>
-                    &nbsp&nbsp&nbsp&nbsp- Trained the model using 70/30 split methodology with 5000+ iterations<br>
-                    &nbsp&nbsp&nbsp&nbsp- Implemented real-time pattern recognition for immediate movement
-                    classification<br>
-                    &nbsp&nbsp&nbsp&nbsp- Created a complete information-processing chain: sensor input → pattern
-                    recognition → motor control.<br>
-                    &nbsp&nbsp&nbsp&nbsp <br>
-                    Results:<br>
-                    Successfully developed a system capable of recognizing and reproducing complex hand movements in
-                    real-time with an accuracy of 98%, demonstrating practical applications in human-computer
-                    interaction and gesture control
-                    systems.
-                </div>
-
-                <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
-            </li>
+            
             <li>
                 <strong>My Portfolio</strong> (HTML, CSS & Js) - Summer 2024
                 <a href="https://github.com/Alex-Irae/Portfolio" target="_blank">[View on GitHub]</a><br>
