--- a/experience.html
+++ b/experience.html
@@ -41,6 +41,40 @@
         <h2>Internship</h2>
         <ul>
             <li>
+                <strong>AI Research Intern, Genomics,</strong> BGI (Shenzhen) <em>(Spring 2025)</em><br><br>
+
+                During my internship at BGI Shenzhen, I was given the opportunity to contribute to groundbreaking research in AI-driven genomics. 
+                BGI  is one of the world's leading centers for genomic research and bioinformatics, 
+                dedicated to advancing biotechnology, synthetic biology, and precision medicine. 
+                The institute plays a key role in genome sequencing, bioengineering,
+                and AI-driven innovations that push the boundaries of what is possible in life sciences.
+                BGI’s research spans multiple fields, from human health and agricultural genomics to synthetic DNA design, 
+                fostering cutting-edge advancements in biotechnology. Through its commitment to AI-integrated biological research,
+                BGI is shaping the future of genomics by combining computational models with large-scale biological data, 
+                making it a global leader in the intersection of artificial intelligence and life sciences.
+                <br> <br>
+                As part of my internship at BGI Shenzhen, I am contributing to the development of an AI-driven genome generation framework
+                for bacteriophage synthesis. This project leverages large language models (LLMs)
+                and multi-layer Transformer architectures to optimize the design and generation of synthetic DNA sequences.
+                <br><br>
+                A key aspect of my work involves designing feature representation methods for long genetic sequences,
+                addressing challenges in handling complex genomic data. To improve processing efficiency,
+                I implement evo/evo2 dimensionality reduction alongside block-learning strategies, 
+                enabling the model to extract meaningful biological patterns while maintaining computational efficiency.
+                <br><br>
+                To enhance model interpretability, I integrate an explainability module using feature
+                attribution techniques. This addition ensures greater transparency in how the 
+                AI system generates DNA sequences, allowing for controlled adjustments in genome synthesis.
+                <br><br>
+                The final stage of my internship focuses on validating the proposed AI framework through
+                real-world phage genome synthesis tests. This step ensures that the generated sequences
+                align with biological viability, bridging AI-driven sequence design with practical applications
+                in synthetic biology and genomics. My work contributes to advancing AI applications in bioinformatics,
+                paving the way for more efficient, accurate, and controllable genome engineering techniques.
+                <br> <br><br>
+
+            </li>
+            <li>
                 <strong>Intern,</strong> Zen2050 (Paris) <em>(Summer 2022)</em><br><br>
 
                 I had the opportunity to contribute to our mission to raise the awareness and fight the climate during
