--- a/index.html
+++ b/index.html
@@ -33,14 +33,22 @@
             <h3 class="typing-text">I am a <span></span></h3>
             <p>As a student exploring engineering and medicine, my journey is deeply rooted in the intersection of these
                 fields.<br>
-                Focusing on AI and medical engineering, I am driven by a desire to unveil how machine learning can
-                revolutionize healthcare. This passion has led me into the realms of brain-computer interfaces,
-                neuroengineering, and drug discovery, where I apply my skills through various projects using Python,
+                Focusing on machine learning and medical engineering, I am dedicated to exploring neuroscience, genomics, and artificial intelligence.
+                This path has led me into braincomputer interfaces, neuroengineering, and computational
+                genomics, where I develop AI-driven
+                solutions bridging technology with
+                human capability and biological
+                innovation.
+                and drug discovery, where I apply my skills through various projects using Python,
                 MATLAB, and C++ to tackle complex challenges in medicine with deep learning and data-driven insights.
                 <br>
-                Currently studying computer science and machine learning at Tianjin University for the fall semester, I
-                am focusing on the development of machine learning algorithms and computer vision techniques to enhance
-                the precision, reliability, and effectiveness of future AI-driven solutions in healthcare.
+                Currently intern at BGI in Shenzhen, I am developing an AI-driven phage genome generation framework using
+                 large language models (LLMs) and multi-layer Transformer architectures.
+                  My work focuses on feature representation for long genetic sequences, 
+                  optimized using evo/evo2 dimensionality reduction.
+                   Additionally, I implement an explainability module to enhance model transparency and control in genome synthesis. 
+                   This method is being validated through practical phage genome testing, 
+                   bridging AI and synthetic biology for real-world applications.
                 <br>
                 As a project leader, I thrive in collaborative environments that foster innovation and challenge my
                 problem-solving abilities. Engaging with diverse teams allows me to approach machine learning challenges
