--- a/projects.html
+++ b/projects.html
@@ -136,7 +136,7 @@
             </li>
             <li>
                 <strong>
-                    Text Summarization Based on Deep Learning </strong> (Python) - In Progess - <br><br>
+                    Text Summarization Based on Deep Learning </strong> (Python) - Fall 2024 - <br><br>
                 This project aims to leverage advanced deep learning
                 techniques to generate concise summaries of selected texts from specific categories such as economics or
                 ecological protection. <br>
